--- a/html-css-1/index-1.html
+++ b/html-css-1/index-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta author="carlos"/>
-  <link ref="sylesheets" href="style-1.css" />
+  <link rel="sylesheets" type="text/css" href="style-1.css" />
   <title>welcome to skillchecks 1 document</title>
 </head>
 <body>
